# rproxy-sim

./: .gitignore  Makefile  Notebook.ipynb  README.md  pyproject.toml  requirements.txt
docs/: avance_des_minimo.md  avance_escenarios.md  borrador_informe.md  diagrama_decision_simulador.md  flow.md  resultado_capacity_sweep.md  resultado_load_sweep_erlang_b.md  supuestos_modelo.md  verificacion_modelo.md
experiments/: blocking_trace.py  capacity_sweep.py  load_sweep_erlang_b.py  scenario_comparison.py  validation_erlang_b.py
notebooks/: 01_resultados_base.ipynb
results/: blocking_trace.csv  blocking_trace_summary.txt  capacity_sweep_console_output.txt  capacity_sweep_replicas.csv  capacity_sweep_summary.csv  capacity_sweep_summary.txt  des_minimo_resultado_01.txt  load_sweep_erlang_b_console_output.txt  load_sweep_erlang_b_replicas.csv  load_sweep_erlang_b_summary.csv  load_sweep_erlang_b_summary.txt  scenario_comparison_replicas.csv  scenario_comparison_summary.csv  scenario_comparison_summary.txt  validation_erlang_b_replicas.csv  validation_erlang_b_summary.txt
src/proxy_sim/: __init__.py  components.py  engine.py  loadbalancers.py  plotting.py  rng.py  simulator.py
src/rproxy_sim/: des_loss.py
tests/: test_components.py  test_engine.py  test_loadbalancers.py  test_plotting.py  test_simulator.py
