[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-sim"
version = "0.1.0"
description = "Discrete-event simulator for a reverse proxy with multiple backends and load-balancing policies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "TEL341 SIM-REDES" },
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.scripts]
proxy-sim = "proxy_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"